Row and column is now creating without ajax

--- a/assets/css/wpmm-admin-items.css
+++ b/assets/css/wpmm-admin-items.css
@@ -29,11 +29,11 @@
 }
 
 .wpmm-item-col-5 {
-    width: 37%;
+    width: 41.66666667%;
 }
 
 .wpmm-item-col-7 {
-    width: 57%;
+    width: 58.33333333%;
 }
 
 .wpmm-item-col-8 {
