--- a/assets/css/wpmm-admin-items.css
+++ b/assets/css/wpmm-admin-items.css
@@ -481,6 +481,12 @@ input.wpmm-form-check-input[type=checkbox]:checked::before {
     transition: background-color 100ms linear;
 }
 
+
+.wpmm-item-settings-content .widget.wpmm-cell.wpmm-blue-bg {
+    background: #72aee626;
+    transition: all 300ms;
+}
+
 .wpmm-item-settings-content .widget.wpmm-cell .widget-top {
     background: transparent;
     border: none;
