--- a/assets/css/wpmm-admin-items.css
+++ b/assets/css/wpmm-admin-items.css
@@ -669,3 +669,34 @@ input.wpmm-form-check-input[type=checkbox]:checked::before {
 .wpmm-blue-bg > .wpmm-column-contents-wrapper{
     background: transparent;
 }
+
+.wpmm-item-content.loading {
+    position: relative;
+}
+.wpmm-item-content.loading:before {
+    content: '';
+    background: #fff;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+.wpmm-item-content.loading:after {
+    content: '';
+    border: 1px solid #2271b1;
+    border-left-color: #ede7e7;
+    border-radius: 50%;
+    -webkit-animation: .9s linear infinite spinner-border;
+    animation: .9s linear infinite spinner-border;
+    width: 50px;
+    height: 50px;
+    margin: auto;
+    z-index: 9;
+    top: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
