--- a/blocks/src/wpmm-menu/editor.scss
+++ b/blocks/src/wpmm-menu/editor.scss
@@ -4,6 +4,16 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-wp-megamenu-wpmm-block {
+.wp-block-wp-megamenu-wpmm-menu {
 	border: 1px dotted #f00;
+
+	ul.wpmm_list_menu {
+		list-style: none;
+		padding: 0;
+		display: flex;
+
+		li.is_wpmm {
+			background: lightcoral;
+		}
+	}
 }
