--- a/assets/css/wpmm-admin-items.css
+++ b/assets/css/wpmm-admin-items.css
@@ -498,6 +498,97 @@ input.wpmm-form-check-input[type=checkbox]:checked::before {
 
 .wpmm-column-toolbar {
     padding: 10px 0;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 10px;
+}
+
+.wpmm-row-toolbar-left {
+    display: flex;
+    align-items: center;
+}
+
+.colum_maker {
+    cursor: pointer;
+    background: #ffffff;
+    transition: all .3s;
+    color: #999;
+    margin-left: 20px;
+    border: 1px dashed #dedede;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
+
+.colum_maker button {
+    padding: 5px;
+    border: none;
+    cursor: pointer;
+    background: #ffffff;
+    transition: all .3s;
+    width: 25px;
+    height: 25px;
+    color: #999;
+}
+
+.colum_maker span {
+    white-space: nowrap;
+    padding-right: 0;
+    width: 0;
+    transition: all .3s;
+    visibility: hidden;
+    opacity: 0;
+    left: 100px;
+    position: relative;
+}
+
+.colum_maker:hover span {
+    padding-right: 5px;
+    width: 80px;
+    visibility: visible;
+    opacity: 1;
+    left: 0;
+}
+
+.colum_resizer {
+    display: inline-flex;
+}
+
+
+.colum_resizer input::-webkit-outer-spin-button,
+.colum_resizer input::-webkit-inner-spin-button,
+.colum_resizer input[type=number] {
+    max-width: 50px;
+    min-height: 25px !important;
+    max-height: 25px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border: 1px dashed #dedede !important;
+    margin-left: -1px;
+    margin-inline-end: 0;
+    padding: 0 !important;
+    text-align: center;
+}
+
+.colum_resizer button {
+    padding: 5px;
+    border: none;
+    cursor: pointer;
+    background: #ffffff;
+    transition: all .3s;
+    width: 25px;
+    height: 25px;
+    margin-left: -1px;
+    color: #999;
+    /* border: 1px dashed #fff; */
+    border: 1px dashed #dedede;
+}
+
+.colum_resizer button:hover {
+    color: #111;
+    background: #e9e9e9;
 }
 
 .drop-highlight {
@@ -688,6 +779,7 @@ input.wpmm-form-check-input[type=checkbox]:checked::before {
     color: #fff;
     cursor: pointer;
     transition: all .3s;
+    box-shadow: 0px 0px 8px -2px #000;
 }
 
 .wpmm_image_preview button:hover {
